# rs-dotfiles

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
migrations/2018-06-28-075156_create_repos/: up.sql
proto/: dotfiles.proto  dots.proto
src/: lib.rs  models.rs  schema.rs
src/records/: mod.rs  profiles.rs  repos.rs
