[package]
name = "dots"
version = "0.1.0"
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
env_logger = "0.5.10"
diesel = { version = "1.3.0", features = ["sqlite"] }
dotenv = "0.10"
futures = "~0.1"
futures-cpupool = "~0.1"
grpc = "~0.5"
log = "0.4.0"
protobuf = "~2"
tls-api = "0.1.*"
tls-api-native-tls = "0.1.*"

[build-dependencies]
protoc-rust-grpc = "~0.5"
